# platypus

./: 404.html  Cargo.toml  Readme.md  index.html  mkdocs.yml  pyproject.toml  test.py
docs/: editgraph.md  global.md  index.md  requirements.txt
dtfgraph/: index.html
editgraph/: index.html
global/: index.html
ordgraph/: index.html
search/: search_index.json
src/: ducktype.rs  lib.rs  pydtfgraph.rs  pygraph.rs  pyordgraph.rs
src/vmap/: helpers.rs  mod.rs
vmap/: index.html
