[package]
name = "platypus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "platypus"
crate-type = ["cdylib"]

[dependencies]
fnv = "1.0.7"
pyo3 = { version = "0.16.1", features = ["extension-module"] }
graphbench = { path = "../graphbench" }